CLAUDE.md: the JDK is one apt source away — never skip the Java half again
Operator ruling: document JDK + Panama access so no future session runs
without Panama entirely.

This repo's own history carries commits titled "UNVERIFIED: JDK 26 not
available in this sandbox". Measured today, that is false twice over:

* Ubuntu noble's stock archive serves `openjdk-25-jdk-headless`, and
  Panama FFM has been FINAL since 22, so the whole `internal/ffm`
  membrane runs on it.
* JDK 26 itself -- the exact version those commits wanted -- is one
  EXTRA APT SOURCE away. Adoptium's noble repo carries 8 through 26;
  add the key + list, `apt-get update`, `apt-get install temurin-26-jdk`.

`ALL PASSED (409 checks)` across all 16 suites on BOTH JDKs, identical,
against `abi 0.11, simd ndarray::simd avx512, profile release`.

The trap that made it look impossible is recorded too, because it reads
as the opposite of what it is: the pre-seeded apt index named
`openjdk-25 25.0.2+10-1~24.04`, a version already withdrawn from the
pool, so the install died on a bare `404 Not Found` -- which reads as
"no such package" rather than "your index is stale". `apt-get update`
moved the candidate to `25.0.4+7-1~24.04` and it installed immediately.
Same shape as this workspace's other freshness traps: a cached view
reporting ABSENCE is not evidence of absence.

Also documented: the full build+run recipe (there is no build tool --
`AllTests` is a plain main with meaningful 0/1/2 exit codes, the third
being "native artifact absent so nothing ran", because a missing library
reported as a failure sends the reader hunting a bug that is not there);
why `-Dlgj.library` refuses to fall back to a search path; and the
runtime line the suite prints, which is what proves the run exercised the
artifact you meant.

The honest boundary, narrowed to what it actually is: only the Valhalla
EA arm (`valhalla-lab/src/valhalla`, `value record`) needs a non-apt
fetch. Adoptium stops at 26 and mainline 27 would not help